kubernetes/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/websocket-services: "chat-backend"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms
                port:
                  number: 80
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-frontend
                port:
                  number: 90
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-frontend
                port:
                  number: 91
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 88
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ai-backend
                port:
                  number: 89
